--- a/source/customer.html
+++ b/source/customer.html
@@ -4,8 +4,8 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="description"
-        content="Insurance Exchange">
-  <title>Insurance Exchange</title>
+        content="Gadget Insurence">
+  <title>Gadget Insurence</title>
 
   <link rel="stylesheet" href="https://unpkg.com/purecss@1.0.0/build/pure-min.css" integrity="sha384-"
         crossorigin="anonymous">
@@ -40,7 +40,6 @@
           <a href="#" class="pure-menu-link">Account</a>
         </li>
 
-        <li class="pure-menu-item"><a href="#" class="pure-menu-link">Portfolio</a></li>
         <li class="pure-menu-item"><a href="#" class="pure-menu-link">Charts</a></li>
         <li class="pure-menu-item"><a href="#" class="pure-menu-link">Reports/History</a></li>
       </ul>
