--- a/source/insurer.html
+++ b/source/insurer.html
@@ -4,8 +4,8 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="description"
-        content="Insurance Exchange">
-  <title>Insurance Exchange</title>
+        content="Insurance Manager">
+  <title>Insurance Manager</title>
 
   <link rel="stylesheet" href="https://unpkg.com/purecss@1.0.0/build/pure-min.css" integrity="sha384-"
         crossorigin="anonymous">
@@ -33,15 +33,14 @@
       <a class="pure-menu-heading" href="#">Tokimart</a>
 
       <ul class="pure-menu-list">
-        <li class="pure-menu-item"><a href="#" class="pure-menu-link">Deposit/Withdraw</a></li>
         <li class="pure-menu-item"><a href="#" class="pure-menu-link">Auctions</a></li>
+        <li class="pure-menu-item"><a href="#" class="pure-menu-link">Claims</a></li>
 
         <li class="pure-menu-item menu-item-divided pure-menu-selected">
-          <a href="#" class="pure-menu-link">Account</a>
+          <a href="#" class="pure-menu-link">Issue insurance</a>
         </li>
 
         <li class="pure-menu-item"><a href="#" class="pure-menu-link">Portfolio</a></li>
-        <li class="pure-menu-item"><a href="#" class="pure-menu-link">Charts</a></li>
         <li class="pure-menu-item"><a href="#" class="pure-menu-link">Reports/History</a></li>
       </ul>
     </div>
@@ -49,8 +48,8 @@
 
   <div id="main">
     <div class="header">
-      <h1>Tokimart Insurance Exchange</h1>
-      <h2>Trade insurance risk with ease</h2>
+      <h1>Tokimart Insurance Manager</h1>
+      <h2>Manage your insurance containers</h2>
     </div>
 
     <div id="root"></div>
