--- a/source/insurer.html
+++ b/source/insurer.html
@@ -52,7 +52,9 @@
       <h2>Manage your insurance containers</h2>
     </div>
 
-    <div id="root"></div>
+    <div class="content">
+      <div id="root" class="pure-g"></div>
+    </div>
   </div>
 </div>
 
