--- a/source/customer.html
+++ b/source/customer.html
@@ -51,8 +51,9 @@
       <h1>Tokimart Insurance Exchange</h1>
       <h2>Trade insurance risk with ease</h2>
     </div>
-
-    <div id="root"></div>
+    <div class="content">
+    <div id="root" class="pure-g"></div>
+    </div>
   </div>
 </div>
 
