splitting layout by actor

--- a/source/insurer.html
+++ b/source/insurer.html
@@ -53,7 +53,7 @@
     </div>
 
     <div class="content">
-      <div id="root" class="pure-g"></div>
+      <div id="insurer" class="pure-g"></div>
     </div>
   </div>
 </div>
