--- a/source/index.html
+++ b/source/index.html
@@ -53,7 +53,7 @@
       <h2>Trade insurance risk with ease</h2>
     </div>
     <div class="content">
-    <div id="root" class="pure-g"></div>
+    <div id="exchange" class="pure-g"></div>
     </div>
   </div>
 </div>
